Alterei a cor do hover do botão

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     --botao-azul: #167BF7;
     --cor-fundo: #00030C;
     --fonte-principal: 'Inter';
-    --botao-azul-efeito:#7db0ee;
+    --botao-azul-efeito:#ee7dea;
 
 }
 
